@@ -1,4 +1,4 @@
-.TH HDPARM 8 "June 2015" "Version 9.48"
+.TH HDPARM 8 "October 2016" "Version 9.50"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
