@@ -1,7 +1,7 @@
 Begin4
 Title:		hdparm
-Version:	9.49
-Entered-date:	2016-10-17
+Version:	9.50
+Entered-date:	2016-10-19
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
 		v9.49 bugfixes and ACS-3 enhancements.
 		v9.48 fix devslp bugs
@@ -123,7 +123,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		158K hdparm-9.49.tar.gz
+		133K hdparm-9.50.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux
 Copying-policy:	BSD License
